--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header>
     <main class="one">
         <div class="carousel">
-            <iframe width="1500px" height="900px" src="https://www.youtube.com/embed/7OIFdWk83no?si=-vCQf5bvhJfRl6G8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="1000px" height="700px" src="https://www.youtube.com/embed/7OIFdWk83no?si=-vCQf5bvhJfRl6G8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             
             <ul class="videocontent">
                 <li class="title">
@@ -117,13 +117,13 @@
                     </div>
 
                     <ul class="reiw">
-                        <li>(닉네임:rexxx님) 이런 사랑 나는 언제쯤</li>
-                        <li>(닉네임:lovxxx님) 나에게도 이런 장롱 하나쯤 있었다면,,</li>
-                        <li>(닉네임:paxxx님) 남주 너무 잘생김 여주 핵이쁨</li>
-                        <li>(닉네임:hxx님) 저 불안이 머리털 다 뽑고 싶었습니다.</li>
-                        <li>(닉네임:rex님) 저 완전 T 인데 눈물 콧물 다빼고 옴 F가 되,, </li>
-                        <li>(닉네임:rexxx님) 저도 남편이랑 한번 크게 사고나서 기억이라도 잃어볼까요?</li>
-                        <li>(닉네임:rexxx님) 이렇게 티나는 CG는 첨이야,,</li>
+                        <li>(영화: 어바웃 타임 / 닉네임:rexxx님) 이런 사랑 나는 언제쯤</li>
+                        <li>(영화: 어바웃 타임 / 닉네임:lovxxx님) 나에게도 이런 장롱 하나쯤 있었다면,,</li>
+                        <li>(영화: 30일 / 닉네임:paxxx님) 남주 너무 잘생김 여주 핵이쁨</li>
+                        <li>(영화: 인사이드아웃 2 / 닉네임:hxx님) 저 불안이 머리털 다 뽑고 싶었습니다.</li>
+                        <li>(영화: 소방관 / 닉네임:rex님) 저 완전 T 인데 눈물 콧물 다빼고 옴 F가 되,, </li>
+                        <li>(영화: 30일 / 닉네임:rexxx님) 저도 남편이랑 한번 크게 사고나서 기억이라도 잃어볼까요?</li>
+                        <li>(영화: 트와일라잇 / 닉네임:rexxx님) 이렇게 티나는 CG는 첨이야,,</li>
                     </ul>
                 </div>
                 <hr>
