--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li class="me"><a href="#">공지사항</a></li>
                 <li class="me"><a href="./page/content/method.html">사이트 사용방법</a></li>
                 <ul class="user1">
-                    <li><button class="log"><a href="#">로그인</a></button></li>
+                    <li><button class="log"><a href="./page/user/login.html">로그인</a></button></li>
                     <li><button class="join"><a href="#">회원가입</a></button></li>
                     <li><a href="#"><img id="callme" src="./static/images/here.png" alt="여보세요"></a></li>
                 </ul>
